tests/sumo/output/e3/errors/pos_too_high__exit/errors.sumo
Error: The position of detExit '4/1to3/1' lies beyond the lane's '4/1to3/1_0' end.
Quitting (on error).
